--- a/settings.html
+++ b/settings.html
@@ -1,63 +1,86 @@
-<!DOCTYPE html>
+<!DOCTYPE html>Add commentMore actions
+<html lang="en" class="bg-gray-100">
 <html lang="en" class="bg-gradient-to-br from-indigo-800 to-blue-900">
 <head>
   <meta charset="UTF-8">
   <title>Settings</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    function openTab(tabId) {
+@@ -9,126 +9,136 @@
       const tabs = document.querySelectorAll('.tab-content');
       const buttons = document.querySelectorAll('.tab-button');
       tabs.forEach(tab => tab.classList.add('hidden'));
+      buttons.forEach(btn => btn.classList.remove('text-blue-600'));
       buttons.forEach(btn => btn.classList.remove('text-blue-300'));
       document.getElementById(tabId).classList.remove('hidden');
+      event.target.classList.add('text-blue-600');
       event.target.classList.add('text-blue-300');
     }
   </script>
 </head>
+<body class="min-h-screen flex items-center justify-center text-black">
 <body class="min-h-screen flex bg-gradient-to-br from-indigo-800 to-blue-900 text-white">
 
- <!-- Sidebar -->
-<aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
-  <div>
-    <!-- Sidebar Header (Menu Icon) -->
-    <div class="flex justify-center items-center mb-4">
-      <i data-feather="menu" class="cursor-pointer"></i>
+  <div class="bg-white p-8 rounded-xl w-full max-w-2xl shadow space-y-6">
+    <h1 class="text-2xl font-bold text-center">Settings</h1>
+
+    <!-- Tab Nav -->
+    <div class="flex space-x-4 border-b pb-2 mb-4 justify-center">
+      <button class="tab-button text-blue-600 font-semibold" onclick="openTab('tab-ui')">Basic UI</button>
+      <button class="tab-button" onclick="openTab('tab-assistant')">Assistant</button>
+      <button class="tab-button" onclick="openTab('tab-notify')">Notifications</button>
+      <button class="tab-button" onclick="openTab('tab-system')">System</button>
+      <button class="tab-button" onclick="openTab('tab-advanced')">Advanced</button>
+  <!-- Sidebar -->
+  <aside class="w-20 bg-black bg-opacity-40 p-4 flex flex-col items-center space-y-6 text-white">
+    <div class="hover:text-indigo-300 cursor-pointer" title="Dashboard">
+      <i data-feather="home"></i>
     </div>
-
-    <!-- Main Icons -->
-    <div class="flex flex-col space-y-6 mt-96">
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-        <i data-feather="home"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
-      </div>
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-        <i data-feather="zap"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
-      </div>
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-        <i data-feather="users"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
-      </div>
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-        <i data-feather="bar-chart-2"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
-      </div>
-      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-        <i data-feather="book-open"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
-      </div>
+    <div class="hover:text-indigo-300 cursor-pointer" title="Settings">
+      <i data-feather="settings"></i>
     </div>
-  </div>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>feather.replace();</script>
+  </aside>
 
-  <!-- Settings Icon -->
-  <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
-    <i data-feather="settings"></i>
-    <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
-  </a>
-</aside>
+    <!-- Basic UI Tab -->
+    <section id="tab-ui" class="tab-content space-y-4">
+      <h2 class="text-xl font-semibold">🎨 Basic UI Settings</h2>
+      <label class="block">Your Name:
+        <input id="owner-name" class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen's Workspace">
+      </label>
+      <label class="block">Background Theme:
+        <select id="bg-color" class="w-full mt-1 p-2 border rounded">
+          <option value="">Default (Slate)</option>
+          <option value="indigo">Indigo Blue</option>
+          <option value="pink">Pink Red</option>
+          <option value="green">Green Teal</option>
+        </select>
+      </label>
+      <label class="block">Sidebar Colour:
+        <input type="color" id="sidebar-color" class="w-12 h-10 border rounded">
+      </label>
+      <label class="block">Language:
+        <select id="language" class="w-full mt-1 p-2 border rounded">
+          <option value="en">English</option>
+          <option value="es">Spanish</option>
+          <option value="fr">French</option>
+          <option value="de">German</option>
+        </select>
+      </label>
+    </section>
+  <!-- Settings Panel -->
+  <div class="flex-1 p-10">
+    <div class="bg-white text-black p-8 rounded-xl max-w-3xl mx-auto shadow space-y-6">
+      <h1 class="text-2xl font-bold text-center">Settings</h1>
 
-
+    <!-- Assistant Preferences Tab -->
+    <section id="tab-assistant" class="tab-content hidden space-y-2">
+      <h2 class="text-xl font-semibold">🤖 Assistant Preferences</h2>
+      <label class="block"><input type="checkbox" class="mr-2">Enable Assistant Suggestions</label>
+      <label class="block"><input type="checkbox" class="mr-2">Mute Assistant Sounds</label>
+      <label class="block"><input type="checkbox" class="mr-2">Remember Tasks Across Sessions</label>
+      <label class="block"><input type="checkbox" class="mr-2">Enable Smart Suggestions</label>
+      <label class="block"><input type="checkbox" class="mr-2">Show Tips / Training Overlay</label>
+    </section>
       <!-- Tab Navigation -->
       <div class="flex space-x-4 border-b pb-2 mb-4 justify-center">
         <button class="tab-button text-blue-300 font-semibold" onclick="openTab('tab-ui')">Basic UI</button>
@@ -67,6 +90,21 @@
         <button class="tab-button" onclick="openTab('tab-advanced')">Advanced</button>
       </div>
 
+    <!-- Notifications Tab -->
+    <section id="tab-notify" class="tab-content hidden space-y-2">
+      <h2 class="text-xl font-semibold">🔔 Notifications</h2>
+      <label class="block"><input type="checkbox" class="mr-2">Email Notifications</label>
+      <label class="block"><input type="checkbox" class="mr-2">In-App Notifications</label>
+      <label class="block"><input type="checkbox" class="mr-2">Notify When Powerups Released</label>
+      <label class="block"><input type="checkbox" class="mr-2">Notify When Assistant Updates</label>
+      <label class="block mt-2">Digest Frequency:
+        <select class="w-full mt-1 p-2 border rounded">
+          <option>Daily</option>
+          <option>Weekly</option>
+          <option>None</option>
+        </select>
+      </label>
+    </section>
       <!-- UI Settings Tab -->
       <div id="tab-ui" class="tab-content">
         <label class="block mb-3">
@@ -105,6 +143,18 @@
         </label>
       </div>
 
+    <!-- System Preferences Tab -->
+    <section id="tab-system" class="tab-content hidden space-y-2">
+      <h2 class="text-xl font-semibold">⚙️ System Preferences</h2>
+      <label class="block">Theme Mode:
+        <select class="w-full mt-1 p-2 border rounded">
+          <option>Light</option>
+          <option>Dark</option>
+          <option>System</option>
+        </select>
+      </label>
+      <label class="block"><input type="checkbox" class="mr-2">Show Debug Console</label>
+      <label class="block"><input type="checkbox" class="mr-2">Opt-in to Beta Features</label>
       <!-- Assistant Settings Tab -->
       <div id="tab-assistant" class="tab-content hidden">
         <label class="block"><input type="checkbox" class="mr-2">Enable Assistant Suggestions</label>
@@ -114,6 +164,10 @@
         <label class="block"><input type="checkbox" class="mr-2">Show Tips / Training Overlay</label>
       </div>
 
+      <div class="flex space-x-2 mt-3">
+        <button class="px-4 py-2 bg-blue-500 text-white rounded">Export</button>
+        <button class="px-4 py-2 bg-green-500 text-white rounded">Import</button>
+        <button class="px-4 py-2 bg-red-500 text-white rounded">Reset All</button>
       <!-- Notifications Tab -->
       <div id="tab-notify" class="tab-content hidden">
         <label class="block"><input type="checkbox" class="mr-2">Email Notifications</label>
@@ -128,7 +182,27 @@
           </select>
         </label>
       </div>
+    </section>
 
+    <!-- Advanced Preferences Tab -->
+    <section id="tab-advanced" class="tab-content hidden space-y-2">
+      <h2 class="text-xl font-semibold">🧾 Advanced Preferences</h2>
+      <label class="block">Default Currency:
+        <select class="w-full mt-1 p-2 border rounded">
+          <option>GBP (£)</option>
+          <option>USD ($)</option>
+          <option>EUR (€)</option>
+        </select>
+      </label>
+      <label class="block mt-2">Preferred Units:
+        <select class="w-full mt-1 p-2 border rounded">
+          <option>Kilometres</option>
+          <option>Miles</option>
+        </select>
+      </label>
+      <label class="block mt-2"><input type="checkbox" class="mr-2">Enable Experimental Assistants</label>
+      <label class="block"><input type="checkbox" class="mr-2">Turn on Performance Logging</label>
+    </section>
       <!-- System Preferences Tab -->
       <div id="tab-system" class="tab-content hidden">
         <label class="block"><input type="checkbox" class="mr-2">Dark Mode</label>
@@ -138,6 +212,11 @@
         <label class="block"><input type="checkbox" class="mr-2">Beta Features Opt-in</label>
       </div>
 
+    <!-- Bottom Buttons -->
+    <div class="pt-6 flex justify-end space-x-4">
+      <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+      <button class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Save Settings</button>
+    </div>
       <!-- Advanced Settings Tab -->
       <div id="tab-advanced" class="tab-content hidden">
         <label class="block mb-2">Default Currency:
@@ -164,5 +243,6 @@
       </div>
     </div>
   </div>
+
 </body>
 </html>
