--- a/settings.html
+++ b/settings.html
@@ -1,144 +1,158 @@
 <!DOCTYPE html>
-<html lang="en" class="bg-gradient-to-br from-indigo-800 to-blue-900">
+<html lang="en" class="bg-gray-100">
 <head>
   <meta charset="UTF-8">
   <title>Settings</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    function openTab(tabId) {
-      const tabs = document.querySelectorAll('.tab-content');
-      const buttons = document.querySelectorAll('.tab-button');
-      tabs.forEach(tab => tab.classList.add('hidden'));
-      buttons.forEach(btn => btn.classList.remove('text-blue-300'));
-      document.getElementById(tabId).classList.remove('hidden');
-      event.target.classList.add('text-blue-300');
-    }
-  </script>
+  <script src="https://unpkg.com/feather-icons"></script>
 </head>
-<body class="min-h-screen flex bg-gradient-to-br from-indigo-800 to-blue-900 text-white">
 
-  <!-- Sidebar -->
-  <aside class="w-20 bg-black bg-opacity-40 p-4 flex flex-col items-center space-y-6 text-white">
-    <div class="hover:text-indigo-300 cursor-pointer" title="Dashboard">
-      <i data-feather="home"></i>
-    </div>
-    <div class="hover:text-indigo-300 cursor-pointer" title="Settings">
-      <i data-feather="settings"></i>
-    </div>
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>feather.replace();</script>
-  </aside>
+<body class="min-h-screen text-white" style="background-color: #8C8CCF;">
 
-  <!-- Settings Panel -->
-  <div class="flex-1 p-10">
-    <div class="bg-white text-black p-8 rounded-xl max-w-3xl mx-auto shadow space-y-6">
-      <h1 class="text-2xl font-bold text-center">Settings</h1>
+  <div class="flex min-h-screen">
 
-      <!-- Tab Navigation -->
-      <div class="flex space-x-4 border-b pb-2 mb-4 justify-center">
-        <button class="tab-button text-blue-300 font-semibold" onclick="openTab('tab-ui')">Basic UI</button>
-        <button class="tab-button" onclick="openTab('tab-assistant')">Assistant</button>
-        <button class="tab-button" onclick="openTab('tab-notify')">Notifications</button>
-        <button class="tab-button" onclick="openTab('tab-system')">System</button>
-        <button class="tab-button" onclick="openTab('tab-advanced')">Advanced</button>
+    <!-- Sidebar -->
+    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
+      <div>
+        <!-- Sidebar Header -->
+        <div class="flex justify-center items-center mb-4">
+          <i data-feather="menu" class="cursor-pointer"></i>
+        </div>
+
+        <!-- Sidebar Icons -->
+        <div class="flex flex-col space-y-6 mt-96">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="home"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="zap"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="users"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="bar-chart-2"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="book-open"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
+          </div>
+        </div>
       </div>
 
-      <!-- UI Settings Tab -->
-      <div id="tab-ui" class="tab-content">
-        <label class="block mb-3">
-          Business / Personal Name:
-          <input class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen Trautman">
-        </label>
-        <label class="block mb-3">
-          Background Colour:
-          <select class="w-full mt-1 p-2 border rounded">
-            <option value="">Default (Slate)</option>
-            <option value="indigo">Indigo Blue</option>
-            <option value="pink">Pink Red</option>
-            <option value="green">Green Teal</option>
-          </select>
-        </label>
-        <label class="block mb-3">
-          Sidebar Colour:
-          <input type="color" class="w-12 h-10 border rounded">
-        </label>
-        <label class="block mb-3">
-          Language:
-          <select class="w-full mt-1 p-2 border rounded">
-            <option value="en">English</option>
-            <option value="es">Spanish</option>
-            <option value="fr">French</option>
-            <option value="de">German</option>
-            <option value="it">Italian</option>
-            <option value="pt">Portuguese</option>
-            <option value="ru">Russian</option>
-            <option value="zh">Chinese</option>
-            <option value="ja">Japanese</option>
-            <option value="ko">Korean</option>
-            <option value="ar">Arabic</option>
-            <option value="hi">Hindi</option>
-          </select>
-        </label>
-      </div>
+      <!-- Settings Icon -->
+      <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
+        <i data-feather="settings"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
+      </a>
+    </aside>
 
-      <!-- Assistant Settings Tab -->
-      <div id="tab-assistant" class="tab-content hidden">
-        <label class="block"><input type="checkbox" class="mr-2">Enable Assistant Suggestions</label>
-        <label class="block"><input type="checkbox" class="mr-2">Mute Assistant Sounds</label>
-        <label class="block"><input type="checkbox" class="mr-2">Remember Tasks Across Sessions</label>
-        <label class="block"><input type="checkbox" class="mr-2">Smart Suggestions</label>
-        <label class="block"><input type="checkbox" class="mr-2">Show Tips / Training Overlay</label>
-      </div>
+    <!-- Main Settings Panel -->
+    <main class="flex-grow p-10 pl-32" style="background-color: #8C8CCF;">
+      <div class="bg-white text-black p-8 rounded-xl w-full max-w-3xl shadow space-y-6 mx-auto">
+        <h1 class="text-2xl font-bold text-center">Settings</h1>
 
-      <!-- Notifications Tab -->
-      <div id="tab-notify" class="tab-content hidden">
-        <label class="block"><input type="checkbox" class="mr-2">Email Notifications</label>
-        <label class="block"><input type="checkbox" class="mr-2">In-App Notifications</label>
-        <label class="block"><input type="checkbox" class="mr-2">Notify When Powerups Released</label>
-        <label class="block"><input type="checkbox" class="mr-2">Notify When Assistant Updates</label>
-        <label class="block mt-2">Digest Frequency:
-          <select class="w-full mt-1 p-2 border rounded">
-            <option>Daily</option>
-            <option>Weekly</option>
-            <option>None</option>
-          </select>
-        </label>
-      </div>
+        <!-- General Settings -->
+        <section>
+          <h2 class="text-xl font-semibold mb-2">🔧 General Settings</h2>
+          <label class="block mb-3">
+            Business / Personal Name:
+            <input id="owner-name" class="w-full mt-1 p-2 border rounded" placeholder="e.g. Stephen Trautman">
+          </label>
+          <label class="block mb-3">
+            Background Colour:
+            <select id="bg-color" class="w-full mt-1 p-2 border rounded">
+              <option value="">Default (Slate)</option>
+              <option value="indigo">Indigo Blue</option>
+              <option value="pink">Pink Red</option>
+              <option value="green">Green Teal</option>
+            </select>
+          </label>
+          <label class="block mb-3">
+            Sidebar Colour:
+            <input type="color" id="sidebar-color" class="w-12 h-10 border rounded">
+          </label>
+          <label class="block mb-3">
+            Language:
+            <select id="language" class="w-full mt-1 p-2 border rounded">
+              <option value="en">English</option>
+              <option value="es">Spanish</option>
+              <option value="fr">French</option>
+              <option value="de">German</option>
+            </select>
+          </label>
+        </section>
 
-      <!-- System Preferences Tab -->
-      <div id="tab-system" class="tab-content hidden">
-        <label class="block"><input type="checkbox" class="mr-2">Dark Mode</label>
-        <label class="block"><input type="checkbox" class="mr-2">Export / Import Preferences</label>
-        <label class="block"><input type="checkbox" class="mr-2">Reset All Settings</label>
-        <label class="block"><input type="checkbox" class="mr-2">Show Debug Console</label>
-        <label class="block"><input type="checkbox" class="mr-2">Beta Features Opt-in</label>
-      </div>
+        <!-- Assistant Toggles -->
+        <section>
+          <h2 class="text-xl font-semibold mb-2">🤖 Assistant Preferences</h2>
+          <label class="block"><input type="checkbox" class="mr-2">Enable Assistant Suggestions</label>
+          <label class="block"><input type="checkbox" class="mr-2">Mute Assistant Sounds</label>
+          <label class="block"><input type="checkbox" class="mr-2">Remember Tasks Across Sessions</label>
+          <label class="block"><input type="checkbox" class="mr-2">Smart Suggestions</label>
+          <label class="block"><input type="checkbox" class="mr-2">Show Tips / Training Overlay</label>
+        </section>
 
-      <!-- Advanced Settings Tab -->
-      <div id="tab-advanced" class="tab-content hidden">
-        <label class="block mb-2">Default Currency:
-          <select class="w-full mt-1 p-2 border rounded">
-            <option>GBP (£)</option>
-            <option>USD ($)</option>
-            <option>EUR (€)</option>
-          </select>
-        </label>
-        <label class="block mb-2">Preferred Units:
-          <select class="w-full mt-1 p-2 border rounded">
-            <option>Kilometres</option>
-            <option>Miles</option>
-          </select>
-        </label>
-        <label class="block"><input type="checkbox" class="mr-2">Enable Experimental Assistants</label>
-        <label class="block"><input type="checkbox" class="mr-2">Turn on Performance Logging</label>
-      </div>
+        <!-- Notifications -->
+        <section>
+          <h2 class="text-xl font-semibold mb-2">🔔 Notifications</h2>
+          <label class="block"><input type="checkbox" class="mr-2">Email Notifications</label>
+          <label class="block"><input type="checkbox" class="mr-2">In-App Notifications</label>
+          <label class="block"><input type="checkbox" class="mr-2">Notify When Powerups Released</label>
+          <label class="block"><input type="checkbox" class="mr-2">Notify When Assistant Updates</label>
+          <label class="block mt-2">Digest Frequency:
+            <select class="w-full mt-1 p-2 border rounded">
+              <option>Daily</option>
+              <option>Weekly</option>
+              <option>None</option>
+            </select>
+          </label>
+        </section>
 
-      <!-- Bottom Buttons -->
-      <div class="pt-6 flex justify-end space-x-4">
-        <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
-        <button class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Save Settings</button>
+        <!-- System Preferences -->
+        <section>
+          <h2 class="text-xl font-semibold mb-2">⚙️ System Preferences</h2>
+          <label class="block"><input type="checkbox" class="mr-2">Dark Mode</label>
+          <label class="block"><input type="checkbox" class="mr-2">Export / Import Preferences</label>
+          <label class="block"><input type="checkbox" class="mr-2">Reset All Settings</label>
+          <label class="block"><input type="checkbox" class="mr-2">Show Debug Console</label>
+          <label class="block"><input type="checkbox" class="mr-2">Beta Features Opt-in</label>
+        </section>
+
+        <!-- Advanced -->
+        <section>
+          <h2 class="text-xl font-semibold mb-2">🧾 Advanced</h2>
+          <label class="block">Default Currency:
+            <select class="w-full mt-1 p-2 border rounded">
+              <option>GBP (£)</option>
+              <option>USD ($)</option>
+              <option>EUR (€)</option>
+            </select>
+          </label>
+          <label class="block mt-2">Preferred Units:
+            <select class="w-full mt-1 p-2 border rounded">
+              <option>Kilometres</option>
+              <option>Miles</option>
+            </select>
+          </label>
+          <label class="block mt-2"><input type="checkbox" class="mr-2">Enable Experimental Assistants</label>
+          <label class="block"><input type="checkbox" class="mr-2">Turn on Performance Logging</label>
+        </section>
+
+        <!-- Save/Cancel -->
+        <div class="pt-4 flex justify-end space-x-4">
+          <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
+          <button class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Save Settings</button>
+        </div>
       </div>
-    </div>
+    </main>
   </div>
+
+  <script>feather.replace();</script>
 </body>
 </html>
